# storage/api-docs/api-docs.json
@@ -13,13 +13,13 @@
         "version": "1.0.0"
     },
     "paths": {
-        "/tasks": {
+        "/api/tasks": {
             "get": {
                 "tags": [
                     "Tasks"
                 ],
                 "summary": "タスク一覧取得",
-                "operationId": "6a93d54730cde509d735e538ab6800f6",
+                "operationId": "471d938a3bfaeb6fbd981d7c3e2728b0",
                 "responses": {
                     "200": {
                         "description": "タスクの一覧を取得します。",
@@ -41,7 +41,7 @@
                     "Tasks"
                 ],
                 "summary": "タスク作成",
-                "operationId": "9b481c0ed5fdfa1a592d70ba39a348ee",
+                "operationId": "f803ebdb2300acdb7e93bbe8d0b9a2e8",
                 "requestBody": {
                     "description": "新しいタスクの情報",
                     "required": true,
@@ -86,13 +86,13 @@
                 }
             }
         },
-        "/tasks/{id}": {
+        "/api/tasks/{id}": {
             "get": {
                 "tags": [
                     "Tasks"
                 ],
                 "summary": "タスク詳細取得",
-                "operationId": "fd3677b5b24695d7b801715869b1357c",
+                "operationId": "90b3cd4d2d4b416dc989d2055dbed06c",
                 "parameters": [
                     {
                         "name": "id",
@@ -123,7 +123,7 @@
                     "Tasks"
                 ],
                 "summary": "タスク更新",
-                "operationId": "85377ff0e935f093dd75ea6886923dbc",
+                "operationId": "1aaf37e74360ef4c10fadaee02ae77fb",
                 "parameters": [
                     {
                         "name": "id",
@@ -184,7 +184,7 @@
                     "Tasks"
                 ],
                 "summary": "タスク削除",
-                "operationId": "5ed5dfd4c645e9398f4282969bfe6478",
+                "operationId": "ad582480cd57c2a4e3b6a426943eeca5",
                 "parameters": [
                     {
                         "name": "id",
